# LZCR-lzcr-zero-association-zh-tw

./: .gitignore  README.md  build_and_copy_to_desktop.cmd
src-tui/: Cargo.toml
src-tui/src/: config.rs  converter.rs  error.rs  main.rs  steam_registry.rs
src-tui/tests/: integration_test.rs  release_test.rs
