[package]
name = "lzcr"
version = "1.0.0"
description = "LZCR"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
simplecc = { version = "0.2", features = ["builtin_dicts"] }
include_dir = "0.7"
crossterm = "0.28"
ratatui = "0.29"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.11"
